hive-macro/tests/macro/hive_test/should_fail/function_argument_ident.rs
#[hive_macro::hive_test]
fn test_function(wrong_ident: String, handle: String, info: String, define: String) {}

fn main() {}
