hive-macro/tests/macro/hive_test/should_fail/function_argument_ident.stderr
error: Wrong function argument name

         = help: For better readability Hive testfunctions should have the same argument names as shown in the example below.
         = note: example: fn my_fancy_test(test_channel: &mut dyn TestChannelHandle, session: &mut Session, target_info: &HiveTargetInfo, defines: &DefineRegistry);

 --> tests/macro/hive_test/should_fail/function_argument_ident.rs:2:18
  |
2 | fn test_function(wrong_ident: String, handle: String, info: String, define: String) {}
  |                  ^^^^^^^^^^^
